fix: fix dev instruction dark mode

--- a/docs/dev/assets/styles-i.css
+++ b/docs/dev/assets/styles-i.css
@@ -1,7 +1,7 @@
 body {
   background-color: #FFF;
 }
-text {
+.text {
   color: #323232;
 }
 
@@ -9,7 +9,7 @@ text {
   body {
     background-color: #000;
   }
-  text {
+  .text {
     color: #CDCDCD;
   }
 }
